crates/tldr-core/tests/fixtures/fix/javascript/undefined_property.error.txt
/app/app.js:2
const host = config.server.host;
                           ^
TypeError: Cannot read properties of undefined (reading 'host')
    at Object.<anonymous> (/app/app.js:2:28)
